# DC3-MWCP

./: .gitignore  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  mwcp-client.py  mwcp-server.py  mwcp-test.py  mwcp-tool.py  mwcp_api_example.py  noxfile.py  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: workflow.yml
docs/: DispatcherParserDevelopment.md  ParserComponents.md  ParserDevelopment.md  ParserInstallation.md  ParserTesting.md  PythonStyleGuide.md  Testing.md  construct.ipynb
mwcp/: __init__.py  cli.py  core.py  dispatcher.py  exceptions.py  file_object.py  malwareconfigparser.py  malwareconfigreporter.py  malwareconfigtester.py  metadata.py  parser.py  parser_config.yml  registry.py  report.py  report_writers.py  reporter.py  runner.py  tester.py  testing.py
mwcp/config/: __init__.py  config.yml  fields.json  log_config.yml  schema.json
mwcp/parsers/: .LinuxFinder.py.swp  Archive.py  AutofillFinder.py  CookieFinder.py  CredentialFinder.py  Decoy.py  GenericDropper.py  HistoryFinder.py  ISO.py  LinuxFinder.py  PDF.py  PasswordFinder.py  PowerShell.py  Python.py  Quarantined.py  RSA.py  TA.py  VisualBasic.py  __init__.py  bar.py  bar_malwareconfigparser.py  foo.py  foo_malwareconfigparser.py
mwcp/parsertests/: foo.json
mwcp/resources/: dispatcher.py  enstructured.md  enstructured.py  enstructured_example.py  (+3 more)
tests/: conftest.py  construct_html.html  test_cli.py  test_construct.py  test_custombase64.py  test_dispatcher.py  test_issues.py  test_parser_registry.py  test_pecon.py  test_registry.py  test_reporter.py  test_server.py
(+93 files in other folders)
