[metadata]
version = attr:mwcp.__version__
description = A framework for malware configuration parsers.
long-description-content-type = text/markdown
long-description = file:README.md

[tool:pytest]
script_launch_mode = subprocess
testpaths = mwcp/tests
required_plugins = pytest-console-scripts pytest-xdist
pyargs = mwcp
