[metadata]
version = attr:mwcp.__version__
description = A framework for malware configuration parsers.
long-description-content-type = text/markdown
long-description = file:README.md

[tool:pytest]
testpaths = mwcp/tests
required_plugins = pytest-datadir pytest-xdist
pyargs = mwcp
filterwarnings =
	ignore::DeprecationWarning
addopts =
    -p no:faulthandler
