[metadata]
version = attr:mwcp.__version__
description = A framework for malware configuration parsers.
long_description_content_type = text/markdown
long_description = file:README.md

[tool:pytest]
testpaths = mwcp/tests
required_plugins = pytest-datadir pytest-xdist
filterwarnings =
	ignore::DeprecationWarning
addopts =
    -p no:faulthandler
